--- a/ImageDraw/pom.xml
+++ b/ImageDraw/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ImageDraw</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ImageDraw</name>
-	<description>Flight Check In application</description>
+	<description>Image Analysis[Back end]</description>
 
 	<properties>
 		<java.version>1.8</java.version>
