--- a/ImageDraw/src/main/resources/application.properties
+++ b/ImageDraw/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.servlet..multipart.max-file-size=30MB
 spring.servlet..multipart.max-request-size=30MB
+
+logging.level.root=INFO
+logging.file=C:\\Users\\user\\Documents\\Reservations\\ImageAna\\logging + $(timestamp)+.log 
+
+
